--- a/05-logistic.org
+++ b/05-logistic.org
@@ -186,8 +186,8 @@ _[[https://medium.freecodecamp.org/an-illustrative-introduction-to-fishers-linea
   - =f= takes in a datapoint, if =f(datapoint)>0.5=, the function is
     correct if the target is 1, else incorrect and vice-versa for =<.5=
   - =accuracy= returns the fraction of datapoints that =f= got correct
-- Write out the accuracy of your logistic regression fit in a file
-  =results.txt=, commit the code and file and push to github
+- Write out the best beta and accuracy of your logistic regression fit
+  in a file =results.txt=, commit the code and file and push to github
 # - Implement multinomial logistic regression using SGD (?)
 
 ** Diabetes Dataset Information
